tests/fixtures/invalid/bool_mod_str.py
# Cannot modulo Bool and Str
x: bool = True % "hello"
